/*!\page PPL6History PPL6 History
PPL6 - HISTORY

Version 6.4.20
  - Funktion GetGlobalEncoding hinzugefügt
  - CID3Tag beachtet nun die globale Einstellung für die Kodierung
    der Strings
  - CID3Tag speichert Text-Tags nun grundsätzlich in UTF-16LE
  - Neue Funktionen: XmlEscape und XMLUnEscape

Version 6.4.19 vom 16.02.2014	(SVN-Tag: REL_6_4_19)
  - CBinary hat Malloc- und Calloc-Funktion bekommen,
    Save wurde umbenannt in Savef, Load in Loadf. Neue Save- und Load-
    funktionen, die "const CString &" als einzigen Parameter erwarten 
  - CID3Tag kann ID3-Tags aus AIFF-Dateien lesen und schreiben
  - UnitTests für CID3Tag-Funktionen erstellt
  - MemoryHeap-Klasse sammt Unit-Tests aus PPL7 importiert
  - Algorithmus "List" sammt Unit-Tests aus PPL7 importiert
  - CDir wurde refakturiert: "Get" Funktionen geben jetzt
    "const CDirEntry*" statt "CDirEntry*" zurück, Sortierfunktionen
    aus PPL7 importiert, als Sortieralgorithmus wird nun std::multimap
    statt der eigenen AVL-Methoden verwendet. Dies fixt ein Problem
    bei der Sortierung, wenn identische Schlüssel mehrfach auftauchen
    (z.B. gleiche Timestamps oder Dateigrößen). Zusätzlich kann nun
    auch nach ATime, CTime, MTime und Dateigröße sortiert werden.
  - CDirEntry: "Is..."-Funktionen sind nun als "const" deklariert
  - Valgrind: Mismatched free() / delete / delete [] in
    ppl6::CID3Tag::RemovePicture gefixt
  - CID3Frame Destruktor verändert die Framekette nicht mehr, dafür ist
    allein CID3Tag zuständig
  - CID3Tag: Fehler in der Berechnung der Framegröße bei Textframes
    mit ISO-8859-1 oder UTF-8 Kodierung behoben. (Valgrind Fehler: Invalid
    read/write of size 1)
  - IdentAudioFile: Neue Funktion zum Ermitteln des Audioformats einer
    Datei, sowie deren Kennzahlen, wie Frequenz, Kanäle, Samples, und Länge.
    Die Daten werden im ebenfalls neuen Objekt "AudioInfo" abgelegt.
    Die Funktion soll IdentMPEG ablösen und neben MP3 auch andere Formate